Fix bug when text out of bound

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -98,7 +98,13 @@
             text-decoration: none
     &__desc
         height: 130px
-        line-height: 130px
+        display: table
+        
+    &__desc-text
+        position: relative
+        vertical-align: middle
+        display: table-cell
+
     &__lower-section
         background: #eeeeee
         padding: 5px 0
